[package]
name = "tlc5940"
version = "0.0.0"
authors = ["ThouCheese <luuk.wester@gmail.com>"]
edition = "2018"
description = "A library to interact with the tlc5940 led driver"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio = "0.4.1"
rppal = "0.13.1"
